--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             width: 10px;
             height: 10px;
             margin-left: 2px;
+            margin-bottom: 2px;
             float: left;
         }
     </style>
